# kairo

./: .gitignore  AGENTS_VFX_INTEGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHIVE_NOTICE.md  CHANGELOG.md  DOCS_VALIDATION_REPORT.md  ECOSYSTEM_MAP.md  EXAMPLE_PORTFOLIO_PLAN.md  KAIRO_RENAME_ANALYSIS.md  KAIRO_RENAME_QUICK_REFERENCE.txt  LEVEL_3_TYPE_SYSTEM.md  MLIR_PIPELINE_STATUS.md  NEXT_STEPS_ACTION_PLAN.md  PORTFOLIO_EXAMPLES_STATUS.md  PROJECT_REVIEW_AND_NEXT_STEPS.md  QUICK_ACTION_PLAN.md  QUICK_REFERENCE_GUIDE.txt  README.md  ROADMAP.md  SHOWCASE_OUTPUT_STRATEGY.md  SPECIFICATION.md  STATUS.md  claude.md  pyproject.toml  requirements.txt  setup.py  test_cellular_quick.py  test_diagnosis.py  test_new_examples.py  test_proper_patterns.py
.github/workflows/: tests.yml
archive/root-level-docs/: AMBIENT_MUSIC_domain_duplicate.md
benchmarks/: jit_aot_benchmark.py
creative_computation/: __init__.py  cli.py
creative_computation/ast/: nodes.py  visitors.py
creative_computation/parser/: parser.py
creative_computation/runtime/: runtime.py
creative_computation/stdlib/: __init__.py  field.py  visual.py
docs/: CROSS_DOMAIN_API.md  DOMAIN_ARCHITECTURE.md  DOMAIN_VALUE_ANALYSIS.md  GETTING_STARTED.md  IMPLEMENTATION_PROGRESS.md  KAIRO_CORE_V0.1_ROADMAP.md  MLIR_PHASE5_COMPLETION.md  OPERATOR_PHILOSOPHY.md  PARSER_v0.3.1_CHANGES.md  PROCEDURAL_GRAPHICS_DOMAINS.md  PROFESSIONAL_DOMAINS.md  README.md  SPEC-BI-DOMAIN.md  SPEC-CHEMISTRY.md  SPEC-COORDINATE-FRAMES.md  SPEC-GEOMETRY.md  SPEC-KAX-LANGUAGE.md  SPEC-MLIR-DIALECTS.md  SPEC-OPERATOR-REGISTRY.md  SPEC-PHYSICS-DOMAINS.md  SPEC-PROCEDURAL-GENERATION-DOMAIN.md  SPEC-PROFILES.md  SPEC-SCHEDULER.md  SPEC-SNAPSHOT-ABI.md  SPEC-TIMBRE-EXTRACTION.md  SPEC-TRANSFORM.md  SPEC-TYPE-SYSTEM.md  SPEC-VIDEO-AUDIO-ENCODING.md  UNITS.md  architecture.md  getting-started.md  v0.7.0_DESIGN.md
docs/ADR/: 001-unified-reference-model.md  002-cross-domain-architectural-patterns.md  003-instrument-modeling-domain.md  004-emergence-domain.md  005-chemistry-domain.md  005-gpu-first-domains.md  005-multiphysics-success-patterns.md  005-procedural-generation-domain.md
docs/EXAMPLES/: EMERGENCE-CROSS-DOMAIN.md  J-TUBE-FIREPIT-MULTIPHYSICS.md  KERBAL-SPACE-PROGRAM-SIMULATION.md  RACING-AI-PIPELINE.md  README.md
docs/GUIDES/: DOMAIN_IMPLEMENTATION_GUIDE.md
docs/LEARNINGS/: EMERGENCE_OPERATORS_CATALOG.md  GENETIC_ALGORITHM_OPERATORS.md  OPERATOR_REGISTRY_EXPANSION.md  OPTIMIZATION_ALGORITHMS_CATALOG.md  PROCEDURAL_OPERATORS_CATALOG.md  TIME_ALIGNMENT_OPERATORS.md
docs/USE_CASES/: chemistry-unified-framework.md
docs/adr/: 001-unified-reference-model.md  002-cross-domain-architectural-patterns.md  003-circuit-modeling-domain.md  004-instrument-modeling-domain.md  005-emergence-domain.md  006-chemistry-domain.md  007-gpu-first-domains.md  008-procedural-generation-domain.md  009-ambient-music-generative-domains.md  010-ecosystem-branding-naming-strategy.md  README.md  (+1 more)
examples/: 01_hello_heat.kairo  02_pulsing_circle.kairo  03_wave_ripples.kairo  04_random_walk.kairo  05_gradient_flow.kairo  10_heat_equation.kairo  11_gray_scott.kairo  21_voronoi_heat.kairo  22_delaunay_terrain.kairo  23_geometry_patrol.kairo  25_convex_hull_art.kairo  README.md  acoustics_waveguide_demo.py  audio_dsp_spectral.py  audio_io_demo.py  cross_domain_field_agent_coupling.py  generate_portfolio_outputs.py  geometry_enhancements_demo.py  interactive_diffusion.py  mlir_poc.py  mvp_simple_test.py  phase4_agent_operations.py  phase6_jit_aot_compilation.py  reaction_diffusion.py  smoke_simulation.py  visual_composition_demo.py
kairo/: __init__.py  cli.py
scripts/: README.md  reveal.sh
tests/: conftest.py  test_acoustics.py  test_agent_dialect.py  test_audio_basic.py  test_audio_buffer_ops.py  test_audio_dialect.py  test_audio_effects.py  test_audio_envelopes.py  test_audio_filters.py  test_audio_integration.py  test_audio_io.py  test_audio_physical.py  test_audio_spectral.py  test_cellular_operations.py  test_cli.py  test_cross_domain_interface.py  test_domain_registry.py  test_examples_v0_3_1.py  test_field_dialect.py  test_field_operations.py  test_flappy.py  test_genetic.py  test_geometry.py  test_geometry_benchmarks.py  test_integration.py  test_integrators.py  test_io_integration.py  test_jit_aot_compilation.py  test_level3_validators.py  test_lexer.py  test_mlir_compiler.py  test_mlir_compiler_v2.py  test_mlir_context_v2.py  test_mlir_phase2.py  test_mlir_phase3.py  test_mlir_phase4.py  test_mlir_phase5.py  test_neural.py  test_optimization_operations.py  test_parser.py  (+15 more)
(+212 files in other folders)
